--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+nav.navigations{
+  /* padding: 16px 32px; */
+  background:transparent;
+  background-color: rgba(17, 16, 16, 0);
+}
+
+nav.navigations a{
+  margin: 10px;
+  color: black;
+  /* color: rgb(90, 8, 8); */
+
+}
+
+nav a.active{
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.05rem;
+}
+nav.external a{
+  color:black !important;
+}
+
+.homesectionbg{
+  background-color: #2f0909;
+
+}
+
+.heroSection{
+  background-image: url('/public/assets/img/case_for_investment_africa.png') ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 496px;
+  margin: 0;
+  padding: 0;
+}
+
+.projectSection{
+  background-image: url('/public/assets/img/sda.jpg') ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 396px;
+  margin: 0;
+  padding: 0;
+}
