--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,8 @@ code {
     monospace;
 }
 
-
 nav.navigations{
-  /* padding: 16px 32px; */
+  padding: 16px 32px; 
   background:transparent;
   background-color: rgba(17, 16, 16, 0);
 }
@@ -23,7 +22,6 @@ nav.navigations a{
   margin: 10px;
   color: black;
   /* color: rgb(90, 8, 8); */
-
 }
 
 nav a.active{
